add headers and copy of requets id to initiator
